<resources>
    <string name="app_name">MyPet</string>
    <string name="splash_screen_text1">Do not abandon a pet…\nrather adopt it!</string>
    <string name="splash_screen_text2">My pet is your pet!</string>
    <string name="splash_screen_center_image">Center image for Splash Screen</string>

    <string name="google_description">Google Logo</string>
    <string name="log_in_title">Log In</string>
    <string name="show_pwd_description">Show the password characters</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_enter">Enter</string>
    <string name="log_in_sign_in">Are you new here?</string>
    <string name="log_in_username">Username:</string>
    <string name="log_in_welcome">Hello, welcome back!</string>
    <string name="log_in_alternative">Or log in with</string>
    <string name="log_in_checkbox">Remember me</string>
    <string name="log_in_forgot">Forgot password?</string>
    <string name="log_in_password">Password:</string>
    <string name="input_password">Enter password</string>
    <string name="input_username">Enter username</string>

    <string name="back_arrow">Back arrow</string>

    <string name="recover_description">An email with your password\nwill be sent to you</string>
    <string name="recover_email">Email:</string>
    <string name="recover_input_email">Enter email</string>
    <string name="recover_input_pet_name">Enter name</string>
    <string name="recover_pet_name">Name of your first pet:</string>
    <string name="recover_title">Recover password</string>
    <string name="button_send">Send</string>

    <string name="register_button">Register</string>
    <string name="register_cared_pets">Pets taken care of:*</string>
    <string name="register_email">Email:*</string>
    <string name="register_pet_sitter">I am a Pet Sitter</string>
    <string name="register_pwd">Password:*</string>
    <string name="register_pwd_confirm">Confirm Password:*</string>
    <string name="register_pwd_input">Enter password</string>
    <string name="register_services">Offered services:*</string>
    <string name="register_subtitle">Register</string>
    <string name="register_title">Create an account</string>
    <string name="register_username">Username:*</string>
    <string name="register_username_input">Enter username</string>
    <string name="name">Name:*</string>
    <string name="name_input">Enter name</string>
    <string name="surname">Surname:*</string>
    <string name="surname_input">Enter surname</string>
    <string name="email_input">Enter email</string>
    <string name="province">Province:*</string>
    <string name="region">Region:*</string>
    <string name="address">Address:</string>
    <string name="address_input">Enter address</string>
    <string name="phone_numb">Phone number:*</string>
    <string name="phone_numb_input">Enter number</string>
    <string name="first_pet_name">First Pet Name:*\n(For the password recovery)</string>
    <string name="first_pet_name_input">Enter name</string>
    <string name="cared_pet1">Dog</string>
    <string name="cared_pet2">Cat</string>
    <string name="cared_pet3">Other pets</string>
    <string name="service1">Pet Sitting at home</string>
    <string name="service2">Pet Sitting at the pet sitter’s home</string>
    <string name="service3">Home visit</string>
    <string name="service4">Walk</string>
    <string name="service5">Change of litter</string>
    <string name="pet_sitter_desc">Description:</string>
    <string name="pet_sitter_desc_input">Enter a description about yourself</string>

    <string name="nav_buttons">━━</string>

    <string name="info_app_authors">Matteo Basili</string>
    <string name="info_app_desc">Computer engineering student at the University of Rome Tor Vergata</string>
    <string name="info_app_emails">matteo.basili@students.uniroma2.eu</string>
    <string name="info_app_par1">Author:</string>
    <string name="info_app_par2">Description:</string>
    <string name="info_app_par3">Email:</string>
    <string name="info_app_title">App info</string>
    <string name="info_app_phrase">If you love pets too,\nthis is the app for you!</string>

    <string name="search_frag_pet">Find Pet</string>
    <string name="search_frag_pet_desc">Image for pet adoption</string>
    <string name="search_frag_pet_sitter">Find\nPet Sitter</string>
    <string name="search_frag_pet_sitter_desc">Image for pet sitter adoption</string>
    <string name="search_frag_shop">Find Pets Shop</string>
    <string name="search_frag_title">Home</string>
    <string name="search_frag_vet">Find Veterinarian</string>

    <string name="map_frag_title">Map</string>

    <string name="profile_frag_ads">My ads</string>
    <string name="profile_frag_arrow">&gt;</string>
    <string name="profile_frag_cared_pets">Cared pets</string>
    <string name="profile_frag_favorites">Favorites</string>
    <string name="profile_frag_init_dislikes" />
    <string name="profile_frag_init_likes" />
    <string name="profile_frag_logout">Logout</string>
    <string name="profile_frag_personal_info">Personal informations</string>
    <string name="profile_frag_services">My services</string>
    <string name="profile_frag_title">Your profile</string>
    <string name="profile_frag_user">Username</string>

    <string name="loading_bar_title">Please wait…</string>

    <string name="confirm_exit_registration_bar_title">Are you sure you want\nto exit registration?</string>
    <string name="yes_button_confirm">Yes</string>
    <string name="no_button_confirm">No</string>

    <string name="find_button">Find</string>

    <string name="init_search_pet_sitter_province">Province:</string>
    <string name="init_search_pet_sitter_subtitle">Pet sitter search</string>
    <string name="init_search_pet_sitter_title">Who are you looking for?</string>
    <string name="init_search_pet_sitter_type">Type:</string>

    <string name="save_button">Save</string>

    <string name="personal_info_frag_title">Personal informations</string>
    <string name="personal_info_name">Name:</string>
    <string name="personal_info_surname">Surname:</string>
    <string name="personal_info_email">Email:</string>
    <string name="personal_info_province">Province:</string>
    <string name="personal_info_region">Region:</string>
    <string name="personal_info_phone_numb">Phone number:</string>
    <string name="personal_info_first_pet_name">First Pet Name:\n(For the password recovery)</string>

    <string name="favorites_frag_title">Favorites</string>
    <string name="favorites_pet_sit_frag_subtitle">Pet sitters</string>

    <string name="personal_ads_frag_no_ads">You have not\nuploaded any ads</string>
    <string name="personal_ads_frag_title">Your ads</string>

    <string name="cared_pets_frag_title">Cared pets</string>

    <string name="services_frag_title">Your services</string>

    <string name="favorites_pets_frag_subtitle">Pets</string>
    <string name="favorites_frag_no_fav">No favorites</string>

    <string name="delete_photo_confirm_title">Are you sure you want\nto delete the photo?</string>

    <string name="pet_sitter_results_subtitle">Here are our pet sitters</string>
    <string name="pet_sitter_results_title">Results</string>
    <string name="pet_sitter_search_no_results_text">No results found</string>

    <string name="pet_sitter_details_cared_pets">Cared pets</string>
    <string name="pet_sitter_details_contact">Contact details</string>
    <string name="pet_sitter_details_description">About me</string>
    <string name="pet_sitter_details_email">Email:</string>
    <string name="pet_sitter_details_name">Name:</string>
    <string name="pet_sitter_details_phone">Phone:</string>
    <string name="pet_sitter_details_place">Place:</string>
    <string name="pet_sitter_details_services">Services</string>

    <string name="pet_sitter_result_region">Region</string>
    <string name="pet_sitter_result_province">Province</string>

    <string name="confirm_exit_app_title">Are you sure you want\nto exit the app?</string>
</resources>