<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/toolbar" layout="@layout/toolbar_with_back"/>
    <ScrollView android:id="@+id/scrollView" android:layout_width="match_parent" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/toolbar" app:layout_constraintVertical_bias="1">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/int_const_layout" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/black" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/services_frag_title" android:fontFamily="@font/actor" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
            <ProgressBar android:id="@+id/load_progressBar" android:background="@drawable/progress" android:visibility="visible" android:layout_width="30dp" android:layout_height="30dp" android:layout_marginTop="12dp" android:indeterminateTint="@color/action_bar_text" android:backgroundTint="@color/action_bar_background" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.563" app:layout_constraintStart_toEndOf="@+id/title" app:layout_constraintTop_toTopOf="parent"/>
            <CheckBox android:textSize="18sp" android:textColor="@color/black" android:textColorHighlight="@color/black" android:textColorHint="@color/black" android:textColorLink="@color/black" android:id="@+id/services_checkBox1" android:clickable="false" android:layout_width="300dp" android:layout_height="48dp" android:layout_marginTop="30dp" android:minHeight="48dp" android:text="@string/service1" android:fontFamily="@font/actor" android:layout_marginStart="11dp" android:buttonTint="@color/black" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/title"/>
            <CheckBox android:textSize="18sp" android:textColor="@color/black" android:textColorHighlight="@color/black" android:textColorHint="@color/black" android:textColorLink="@color/black" android:id="@+id/services_checkBox2" android:clickable="false" android:layout_width="300dp" android:layout_height="48dp" android:layout_marginLeft="16dp" android:layout_marginTop="65dp" android:minHeight="48dp" android:text="@string/service2" android:fontFamily="@font/actor" android:layout_marginStart="11dp" android:buttonTint="@color/black" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/title"/>
            <CheckBox android:textSize="18sp" android:textColor="@color/black" android:textColorHighlight="@color/black" android:textColorHint="@color/black" android:textColorLink="@color/black" android:id="@+id/services_checkBox3" android:clickable="false" android:layout_width="300dp" android:layout_height="48dp" android:layout_marginTop="100dp" android:minHeight="48dp" android:text="@string/service3" android:fontFamily="@font/actor" android:layout_marginStart="11dp" android:buttonTint="@color/black" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/title"/>
            <CheckBox android:textSize="18sp" android:textColor="@color/black" android:textColorHighlight="@color/black" android:textColorHint="@color/black" android:textColorLink="@color/black" android:id="@+id/services_checkBox4" android:clickable="false" android:layout_width="300dp" android:layout_height="48dp" android:layout_marginTop="135dp" android:minHeight="48dp" android:text="@string/service4" android:fontFamily="@font/actor" android:layout_marginStart="11dp" android:buttonTint="@color/black" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/title"/>
            <CheckBox android:textSize="18sp" android:textColor="@color/black" android:textColorHighlight="@color/black" android:textColorHint="@color/black" android:textColorLink="@color/black" android:id="@+id/services_checkBox5" android:clickable="false" android:layout_width="152dp" android:layout_height="48dp" android:layout_marginTop="170dp" android:minHeight="48dp" android:text="@string/service5" android:fontFamily="@font/actor" android:layout_marginStart="11dp" android:buttonTint="@color/black" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/title"/>
            <TextView android:textSize="18sp" android:textColor="@color/black" android:textColorHint="@color/black" android:id="@+id/pet_sitter_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="9dp" android:text="@string/pet_sitter_desc" android:fontFamily="@font/actor" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.054" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/services_checkBox5"/>
            <EditText android:enabled="false" android:textColorHint="@color/disable_color" android:id="@+id/pet_sitter_desc_input" android:background="@drawable/rounded_rectangle_input" android:paddingLeft="8dp" android:paddingRight="8dp" android:layout_width="330dp" android:layout_height="150dp" android:layout_marginTop="4dp" android:hint="@string/pet_sitter_desc_input" android:ems="10" android:inputType="textMultiLine" android:fontFamily="@font/actor" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.494" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/pet_sitter_desc"/>
            <androidx.appcompat.widget.AppCompatButton android:enabled="false" android:textSize="18sp" android:id="@+id/save_button" android:background="@drawable/rounded_rectangle_app_name" android:layout_width="96dp" android:layout_height="48dp" android:layout_marginTop="55dp" android:text="@string/save_button" android:textAllCaps="false" android:fontFamily="@font/actor" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="@+id/int_const_layout" app:layout_constraintTop_toBottomOf="@+id/pet_sitter_desc_input"/>
            <ProgressBar android:id="@+id/save_progressBar" android:background="@drawable/progress" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36dp" android:indeterminateTint="@color/action_bar_text" android:backgroundTint="@color/action_bar_background" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/save_button"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
